improve null analysis